@@ -50,8 +50,7 @@
 	  ;; (FUNCALL macro-expression ...)
 	  ((let ((name (first fun)))
 	     (setq fd (and (symbolp name)
-			   (or (cmp-env-search-macro name)
-			       (macro-function name)))))
+			   (cmp-macro-function name))))
 	   (c1funcall (list* (cmp-expand-macro fd fun) arguments)))
 	  ;; (FUNCALL lisp-expression ...)
 	  ((not (eq (first fun) 'FUNCTION))
