@@ -46,7 +46,7 @@ Returns, as a string, the location of the machine on which ECL runs."
 (defun lisp-implementation-version ()
   "Args:()
 Returns the version of your ECL as a string."
-  "@PACKAGE_VERSION@ (CVS 2008-04-24 09:43)")
+  "@PACKAGE_VERSION@ (CVS 2008-04-24 12:45)")
 
 (defun machine-type ()
   "Args: ()
