@@ -138,6 +138,10 @@ ECL 0.9k:
 
  - Bytecode functions can now be externalized in C compiled files.
 
+ - (FUNCALL (LOAD-TIME-VALUE ...) ...) forced the evaluation of the argument to
+   LOAD-TIME-VALUE. LOAD-TIME-VALUE is now implemented as a special operator
+   and not as a macro.
+
 * System design:
 
  - We introduce a new kind of lisp objects, the stack frames. These are objects
